--- a/app/src/main/res/layout/config.xml
+++ b/app/src/main/res/layout/config.xml
@@ -8,10 +8,10 @@
 
     <EditText
         android:id="@+id/trader_point_entry"
-        android:layout_width="24dp"
+        android:layout_width="26dp"
         android:layout_height="36dp"
-        android:layout_marginTop="204dp"
-        android:layout_marginEnd="53dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="16"
         android:inputType="number"
@@ -19,15 +19,15 @@
         android:singleLine="true"
         android:textAlignment="textEnd"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/trader_label"
+        app:layout_constraintTop_toBottomOf="@+id/points_label" />
 
     <EditText
         android:id="@+id/fighter_point_entry"
-        android:layout_width="24dp"
+        android:layout_width="26dp"
         android:layout_height="36dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="52dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="16"
         android:inputType="number"
@@ -35,15 +35,15 @@
         android:singleLine="true"
         android:textAlignment="textEnd"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/fighter_label"
         app:layout_constraintTop_toBottomOf="@+id/trader_point_entry" />
 
     <EditText
         android:id="@+id/engineer_point_entry"
-        android:layout_width="24dp"
+        android:layout_width="26dp"
         android:layout_height="36dp"
-        android:layout_marginStart="47dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="16"
         android:inputType="number"
@@ -59,20 +59,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="Name"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/enter_name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/enter_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="160dp"
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
@@ -95,11 +96,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="56dp"
         android:text="Pilot"
-        app:layout_constraintEnd_toStartOf="@+id/pilot_point_entry"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/points_label" />
 
@@ -107,7 +105,9 @@
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="731dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintGuide_begin="205dp"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -123,38 +123,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="28dp"
         android:text="Engineer"
-        app:layout_constraintEnd_toStartOf="@+id/engineer_point_entry"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pilot_label" />
 
     <TextView
         android:id="@+id/trader_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="96dp"
-        android:layout_marginEnd="59dp"
+        android:layout_width="45dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="56dp"
         android:text="Trader"
-        app:layout_constraintEnd_toStartOf="@+id/trader_point_entry"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/enter_name" />
+        app:layout_constraintStart_toEndOf="@+id/pilot_point_entry"
+        app:layout_constraintTop_toTopOf="@+id/points_label" />
 
     <TextView
         android:id="@+id/fighter_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="56dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="28dp"
         android:text="Fighter"
-        app:layout_constraintEnd_toStartOf="@+id/fighter_point_entry"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/engineer_point_entry"
         app:layout_constraintTop_toBottomOf="@+id/trader_label" />
 
     <TextView
@@ -162,32 +153,35 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
-        android:text="Set Dificulty"
+        android:text="Set Difficulty"
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.142"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/engineer_label" />
 
     <Spinner
         android:id="@+id/difficulty_spinner"
-        android:layout_width="300dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintHorizontal_bias="0.474"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/difficulty_label" />
+        app:layout_constraintTop_toBottomOf="@+id/difficulty_label"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/pilot_point_entry"
-        android:layout_width="24dp"
+        android:layout_width="26dp"
         android:layout_height="36dp"
         android:layout_marginStart="72dp"
-        android:layout_marginTop="204dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="16"
         android:inputType="number"
@@ -196,16 +190,19 @@
         android:textAlignment="textEnd"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/pilot_label"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/points_label" />
 
     <Button
         android:id="@+id/done_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="228dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Done"
         android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/difficulty_spinner" />
 </android.support.constraint.ConstraintLayout>
