--- a/app/src/main/res/layout/config.xml
+++ b/app/src/main/res/layout/config.xml
@@ -13,10 +13,10 @@
         android:layout_marginStart="54dp"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="16"
         android:inputType="number"
-        android:selectAllOnFocus="false"
+        android:selectAllOnFocus="true"
         android:singleLine="true"
+        android:text="0"
         android:textAlignment="textEnd"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/trader_label"
@@ -29,10 +29,10 @@
         android:layout_marginStart="56dp"
         android:layout_marginTop="12dp"
         android:ems="10"
-        android:hint="16"
         android:inputType="number"
-        android:selectAllOnFocus="false"
+        android:selectAllOnFocus="true"
         android:singleLine="true"
+        android:text="0"
         android:textAlignment="textEnd"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/fighter_label"
@@ -45,10 +45,10 @@
         android:layout_marginStart="44dp"
         android:layout_marginTop="12dp"
         android:ems="10"
-        android:hint="16"
         android:inputType="number"
-        android:selectAllOnFocus="false"
+        android:selectAllOnFocus="true"
         android:singleLine="true"
+        android:text="0"
         android:textAlignment="textEnd"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/engineer_label"
@@ -183,10 +183,10 @@
         android:layout_marginStart="72dp"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="16"
         android:inputType="number"
-        android:selectAllOnFocus="false"
+        android:selectAllOnFocus="true"
         android:singleLine="true"
+        android:text="0"
         android:textAlignment="textEnd"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/pilot_label"
