--- a/app/src/main/res/layout/config.xml
+++ b/app/src/main/res/layout/config.xml
@@ -198,6 +198,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:onClick="onAddPressed"
         android:text="Done"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
