--- a/app/src/main/res/layout/market.xml
+++ b/app/src/main/res/layout/market.xml
@@ -54,7 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="25dp"
         android:text="Name"
         android:textColor="#000"
         android:textSize="15sp"
@@ -123,21 +123,40 @@
             android:id="@+id/creditBalance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="25dp"
             android:layout_marginTop="75dp"
+            android:text="Credit Balance: "
             android:textColor="#000"
-            android:textSize="15sp"
-            android:text="Credit Balance: "></TextView>
+            android:textSize="18sp"></TextView>
 
         <TextView
             android:id="@+id/creditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
             android:layout_marginTop="75dp"
-            android:textColor="#000"
-            android:textSize="15sp"
             android:text="null"
+            android:textColor="#000"
+            android:textSize="18sp"
+            app:layout_constraintStart_toEndOf="@+id/techLevel"></TextView>
+
+        <TextView
+            android:id="@+id/inventoryName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="75dp"
+            android:text="Ship Cargo: "
+            android:textColor="#000"
+            android:textSize="18sp"></TextView>
+
+        <TextView
+            android:id="@+id/inventoryText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="75dp"
+            android:text="0/0"
+            android:textColor="#000"
+            android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/techLevel"></TextView>
 
     </LinearLayout>
