--- a/app/src/main/res/layout/market.xml
+++ b/app/src/main/res/layout/market.xml
@@ -77,9 +77,9 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="25dp"
         android:text="Buying Price"
         android:textColor="#000"
         android:textSize="15sp"
@@ -89,14 +89,26 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="25dp"
         android:text="Selling Price"
         android:textColor="#000"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <TextView
+        android:id="@+id/amountOwned"
+        android:layout_width="55dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:text="Amount Owned"
+        android:textColor="#000"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <LinearLayout
