--- a/app/src/main/res/layout/pirate_encounter.xml
+++ b/app/src/main/res/layout/pirate_encounter.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/pirateName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="130dp"
@@ -19,24 +19,24 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/power"
+        android:id="@+id/piratePower"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="9dp"
         android:text="Power level: null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name" />
+        app:layout_constraintTop_toBottomOf="@+id/pirateName" />
 
     <TextView
-        android:id="@+id/description"
+        android:id="@+id/pirateDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="38dp"
         android:text="description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/power" />
+        app:layout_constraintTop_toBottomOf="@+id/piratePower" />
 
     <Button
         android:id="@+id/fightButton"
@@ -68,7 +68,7 @@
         android:layout_marginStart="86dp"
         android:layout_marginEnd="244dp"
         android:layout_marginBottom="14dp"
-        android:text="doesnt do\n anything yet"
+        android:text="doesn't do\n anything yet"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/fightButton"
         app:layout_constraintEnd_toEndOf="parent"
