--- a/app/src/main/res/layout/config.xml
+++ b/app/src/main/res/layout/config.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -19,6 +18,7 @@
         android:text="0"
         android:textAlignment="textEnd"
         android:textSize="14sp"
+        android:hint="enter trader points here"
         app:layout_constraintStart_toEndOf="@+id/trader_label"
         app:layout_constraintTop_toBottomOf="@+id/points_label" />
 
@@ -35,6 +35,7 @@
         android:text="0"
         android:textAlignment="textEnd"
         android:textSize="14sp"
+        android:hint="enter fighter points here"
         app:layout_constraintStart_toEndOf="@+id/fighter_label"
         app:layout_constraintTop_toBottomOf="@+id/trader_point_entry" />
 
@@ -51,6 +52,7 @@
         android:text="0"
         android:textAlignment="textEnd"
         android:textSize="14sp"
+        android:hint="enter engineer points here"
         app:layout_constraintStart_toEndOf="@+id/engineer_label"
         app:layout_constraintTop_toBottomOf="@+id/pilot_point_entry" />
 
@@ -189,6 +191,7 @@
         android:text="0"
         android:textAlignment="textEnd"
         android:textSize="14sp"
+        android:hint="enter pilot points here"
         app:layout_constraintStart_toEndOf="@+id/pilot_label"
         app:layout_constraintTop_toBottomOf="@+id/points_label" />
 
