--- a/app/src/main/res/layout/travel.xml
+++ b/app/src/main/res/layout/travel.xml
@@ -34,7 +34,7 @@
         app:layout_constraintBottom_toTopOf="@+id/recyclerView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"></LinearLayout>
 
     <TextView
         android:id="@+id/textView5"
@@ -79,7 +79,7 @@
             android:layout_marginTop="75dp"
             android:text="Fuel Remaining: "
             android:textColor="#000"
-            android:textSize="18sp" />
+            android:textSize="18sp"></TextView>
 
         <TextView
             android:id="@+id/fuelText"
@@ -88,7 +88,7 @@
             android:layout_marginTop="75dp"
             android:text="null"
             android:textColor="#000"
-            android:textSize="18sp"/>
+            android:textSize="18sp"></TextView>
 
     </LinearLayout>
 
